fix footer component icon spacing, prep for profile pic

--- a/app/assets/stylesheets/components/footer_component.scss
+++ b/app/assets/stylesheets/components/footer_component.scss
@@ -2,7 +2,7 @@
 .link-container {
   display: flex;
   justify-content: center;
-  text-align: center;
+  align-items: center;
   background-color: black;
   height: 100%;
 
