--- a/app/assets/stylesheets/components/picture_index_item.scss
+++ b/app/assets/stylesheets/components/picture_index_item.scss
@@ -63,9 +63,7 @@
       }
 
       .image-bottom-container {
-        padding-top: 15px;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding: 15px;
 
         .image-bot-title {
           font-size: 28px;
@@ -119,8 +117,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  top: -36px;
 }
 
 #modal-btn {
